[package]
name = "ultraterm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
wgpu = "0.19"
winit = "0.29"
portable-pty = "0.8"
vte = "0.13"
unicode-width = "0.1"
bytemuck = { version = "1.15", features = ["derive"] }
fontdue = "0.8"
arboard = "3.4"
bitflags = "2.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
pollster = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
